galerie test images resolutions

--- a/galerie.html
+++ b/galerie.html
@@ -60,8 +60,8 @@
 
             <div class="column CodWaWZ">
                 <div class="content">
-                    <a href="media\IMG_20241005_230910_065.png">
-                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                    <a href="media\ssj1.png">
+                        <img src="media\ssj1.png" alt="Mountains" style="width:100%">
                         <h4>Call of Duty: World at War Zombies</h4>
                         <p>Call of Duty: World at War</p>
                         <p>2016</p>
@@ -71,8 +71,8 @@
 
             <div class="column SFM">
                 <div class="content">
-                    <a href="media\IMG_20241005_230910_065.png">
-                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                    <a href="media\render4k.png">
+                        <img src="media\render4k.png" alt="Mountains" style="width:100%">
                         <h4>Super Mario 64: The Lost Stars</h4>
                         <p>Source Filmmaker</p>
                         <p>2016</p>
