--- a/galerie.html
+++ b/galerie.html
@@ -93,11 +93,126 @@
 
             <div class="column Bld">
                 <div class="content">
-                    <a href="media\IMG_20241005_230910_065.png">
-                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>Super Mario 64: The Lost Stars</h4>
+                    <a href="media\blender\challenge1.jpg">
+                        <img src="media\blender\challenge1.jpg" alt="Ray Gun" style="width:100%">
+                        <h4>Challenge Créatif 1 : Arme</h4>
                         <p>Blender</p>
-                        <p>2016</p>
+                        <p>Novembre 2023</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\diorama.png">
+                        <img src="media\blender\diorama.png" alt="diorama" style="width:100%">
+                        <h4>Diorama Cyberpunk</h4>
+                        <p>Blender</p>
+                        <p>Decembre 2023</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\owc1-1.jpg">
+                        <img src="media\blender\owc1-1.jpg" alt="owc1-1" style="width:100%">
+                        <h4>La Petite Mort</h4>
+                        <p>Blender</p>
+                        <p>Decembre 2023</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\mario_bloque.mp4">
+                        <video controls>
+                            <source src="media\blender\mario_bloque.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la lecture vidéo.
+                        </video>
+                        <h4>Mario Bloqué dans un autre monde...</h4>
+                        <p>Blender</p>
+                        <p>Decembre 2023</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\IMG_20241005_230910_065">
+                        <img src="media\IMG_20241005_230910_065" alt="owc1-1" style="width:100%">
+                        <h4>////////</h4>
+                        <p>Blender</p>
+                        <p>Decembre 2023</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\challenge2.jpg">
+                        <img src="media\blender\challenge2.jpg" alt="Habitat" style="width:100%">
+                        <h4>Challenge Créatif 2 : Habitat Ventriculaire</h4>
+                        <p>Blender</p>
+                        <p>Février 2023</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\hardsurface.png">
+                        <img src="media\blender\hardsurface.png" alt="Ray Gun" style="width:100%">
+                        <h4>Hardsurface : Avion Steampunk</h4>
+                        <p>Blender</p>
+                        <p>Mars 2023</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\render4k.png">
+                        <img src="media\blender\render4k.png" alt="Le Voyage des âmes" style="width:100%">
+                        <h4>Le Voyage des âmes</h4>
+                        <p>Blender</p>
+                        <p>Avril 2024</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\rendu.mp4">
+                        <video controls>
+                            <source src="media\blender\rendu.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la lecture vidéo.
+                        </video>
+                        <h4>Le Voyage des âmes (Vidéo)</h4>
+                        <p>Blender</p>
+                        <p>Avril 2024</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\base.png">
+                        <img src="media\blender\base.png" alt="Base Form Son Gokûs" style="width:100%">
+                        <h4>Base Form Son Gokû</h4>
+                        <p>Blender</p>
+                        <p>Modèle exporté du jeu: Dragon Ball: Sparking ZERO!</p>
+                        <p>Janvier 2025</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\ssj1.png">
+                        <img src="media\blender\ssj1.png" alt="Super Saiyan Son Gokû" style="width:100%">
+                        <h4>Super Saiyan Son Gokû</h4>
+                        <p>Blender</p>
+                        <p>Modèle exporté du jeu: Dragon Ball: Sparking ZERO!</p>
+                        <p>Janvier 2025</p>
                     </a>
                 </div>
             </div>
