--- a/galerie.html
+++ b/galerie.html
@@ -105,7 +105,7 @@
             <div class="column Bld">
                 <div class="content">
                     <a href="media\blender\diorama.png">
-                        <img src="media\blender\diorama.png" alt="diorama" style="width:100%">
+                        <img src="media\blender\diorama.png" alt="diorama">
                         <h4>Diorama Cyberpunk</h4>
                         <p>Blender</p>
                         <p>Decembre 2023</p>
@@ -116,7 +116,7 @@
             <div class="column Bld">
                 <div class="content">
                     <a href="media\blender\owc1-1.jpg">
-                        <img src="media\blender\owc1-1.jpg" alt="owc1-1" style="width:100%">
+                        <img src="media\blender\owc1-1.jpg" alt="owc1-1">
                         <h4>La Petite Mort</h4>
                         <p>Blender</p>
                         <p>Decembre 2023</p>
