--- a/galerie.html
+++ b/galerie.html
@@ -138,9 +138,38 @@
             </div>
             <div class="column Bld">
                 <div class="content">
-                    <a href="media\IMG_20241005_230910_065">
-                        <img src="media\IMG_20241005_230910_065" alt="owc1-1" style="width:100%">
-                        <h4>////////</h4>
+                    <a href="media\blender\pikmin.mp4">
+                        <video controls>
+                            <source src="media\blender\pikmin.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la lecture vidéo.
+                        </video>
+                        <h4>A Small World</h4>
+                        <p>Blender</p>
+                        <p>Decembre 2023</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\reveil.mp4">
+                        <video controls>
+                            <source src="media\blender\reveil.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la lecture vidéo.
+                        </video>
+                        <h4>Réveil féerique</h4>
+                        <p>Blender</p>
+                        <p>Decembre 2023</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\rencontre.mp4">
+                        <video controls>
+                            <source src="media\blender\rencontre.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la lecture vidéo.
+                        </video>
+                        <h4>Une rencontre inattendue</h4>
                         <p>Blender</p>
                         <p>Decembre 2023</p>
                     </a>
@@ -171,6 +200,19 @@
 
             <div class="column Bld">
                 <div class="content">
+                    <a href="media\blender\rendumine.mp4">
+                        <video controls>
+                            <source src="media\blender\rendumine.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la lecture vidéo.
+                        </video>
+                        <h4>Skyblock</h4>
+                        <p>Blender</p>
+                        <p>Avril 2024</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
                     <a href="media\blender\render4k.png">
                         <img src="media\blender\render4k.png" alt="Le Voyage des âmes" style="width:100%">
                         <h4>Le Voyage des âmes</h4>
@@ -187,6 +229,39 @@
                             Votre navigateur ne supporte pas la lecture vidéo.
                         </video>
                         <h4>Le Voyage des âmes (Vidéo)</h4>
+                        <p>Blender</p>
+                        <p>Avril 2024</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\blue4k.png">
+                        <img src="media\blender\blue4k.png" alt="Mécanique mysterieuse" style="width:100%">
+                        <h4>Mécanique mysterieuse</h4>
+                        <p>Blender</p>
+                        <p>Avril 2024</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\rendu.mp4">
+                        <video controls>
+                            <source src="media\blender\0001-0078.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la lecture vidéo.
+                        </video>
+                        <h4>Mécanique mysterieuse (Vidéo)</h4>
+                        <p>Blender</p>
+                        <p>Avril 2024</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column Bld">
+                <div class="content">
+                    <a href="media\blender\grosdef.png">
+                        <img src="media\blender\grosdef.png" alt="Gros Défouloir" style="width:100%">
+                        <h4>Gros Défouloir</h4>
                         <p>Blender</p>
                         <p>Avril 2024</p>
                     </a>
