--- a/galerie.html
+++ b/galerie.html
@@ -270,6 +270,17 @@
 
             <div class="column Bld">
                 <div class="content">
+                    <a href="media\blender\lampe.png">
+                        <img src="media\blender\lampe.png" alt="Lampe" style="width:100%">
+                        <h4>Lampe torche, Projet Hunted</h4>
+                        <p>Blender / Substance Painter</p>
+                        <p>Décembre 2024</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
                     <a href="media\blender\base.png">
                         <img src="media\blender\base.png" alt="Base Form Son Gokûs" style="width:100%">
                         <h4>Base Form Son Gokû</h4>
@@ -305,11 +316,32 @@
 
             <div class="column SP">
                 <div class="content">
-                    <a href="media\IMG_20241005_230910_065.png">
-                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>Super Mario 64: The Lost Stars</h4>
+                    <a href="media\blender\spaceface.png">
+                        <img src="media\blender\spaceface.png" alt="Spaceship face" style="width:100%">
+                        <h4>Spaceship</h4>
                         <p>Substance Painter</p>
-                        <p>2016</p>
+                        <p>Juin 2024</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column SP">
+                <div class="content">
+                    <a href="media\blender\spaceback.png">
+                        <img src="media\blender\spaceback.png" alt="Spaceship back" style="width:100%">
+                        <h4>Spaceship</h4>
+                        <p>Substance Painter</p>
+                        <p>Juin 2024</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column SP">
+                <div class="content">
+                    <a href="media\blender\lampe.png">
+                        <img src="media\blender\lampe.png" alt="Lampe" style="width:100%">
+                        <h4>Lampe torche, Projet Hunted</h4>
+                        <p>Blender / Substance Painter</p>
+                        <p>Décembre 2024</p>
                     </a>
                 </div>
             </div>
@@ -338,6 +370,8 @@
 <!-- END GRID -->
         </div>
     </section>
+
+<hr>
 
     <section id="contact" class="fade-in">
         <h2>Contact</h2>
