--- a/galerie.html
+++ b/galerie.html
@@ -35,9 +35,37 @@
         <div class="row">
             <div class="column SM64:TLS">
                 <div class="content">
-                    <a href="media\IMG_20241005_230910_065.png">
-                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>Super Mario 64: The Lost Stars</h4>
+                    <img src="media\sm64tls\screen1.png" alt="Hub" style="width:100%">
+                    <h4>Hub Central</h4>
+                    <p>Super Mario 64: The Lost Stars</p>
+                    <p>2016</p>
+                </div>
+            </div>
+            <div class="column SM64:TLS">
+                <div class="content">
+                    <a href="media\sm64tls\screen2.png">
+                        <img src="media\sm64tls\screen2.png" alt="Niveau 1" style="width:100%">
+                        <h4>Niveau 1</h4>
+                        <p>Super Mario 64: The Lost Stars</p>
+                        <p>2016</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column SM64:TLS">
+                <div class="content">
+                    <a href="media\sm64tls\screen3.png">
+                        <img src="media\sm64tls\screen3.png" alt="Niveau Aquatique" style="width:100%">
+                        <h4>Niveau Aquatique</h4>
+                        <p>Super Mario 64: The Lost Stars</p>
+                        <p>2016</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column SM64:TLS">
+                <div class="content">
+                    <a href="media\sm64tls\screen4.png">
+                        <img src="media\sm64tls\screen4.png" alt="Niveau Spaciale" style="width:100%">
+                        <h4>Niveau Spaciale</h4>
                         <p>Super Mario 64: The Lost Stars</p>
                         <p>2016</p>
                     </a>
@@ -46,13 +74,30 @@
 
             <div class="column SM64:TLS">
                 <div class="content">
-                    <a href="media\Portfolio_Naim_Ben_Amar.mp4">
-                        <video controls>
-                            <source src="media\Portfolio_Naim_Ben_Amar.mp4" type="video/mp4">
-                            Votre navigateur ne supporte pas la lecture vidéo.
-                        </video>
-                        <h4>Super Mario 64: The Lost Stars</h4>
-                        <p>Super Mario 64: The Lost Stars</p>
+                    <a href="media\sm64tls\sketchup.png">
+                        <img src="media\sm64tls\sketchup.png" alt="SketchUp" style="width:100%">
+                        <h4>Example d'un niveau sur SketchUp</h4>
+                        <p>SketchUp</p>
+                        <p>2016</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column SM64:TLS">
+                <div class="content">
+                    <a href="media\sm64tls\tt64.png">
+                        <img src="media\sm64tls\tt64.png" alt="TT64" style="width:100%">
+                        <h4>Example d'un niveau sur Toad's Tool 64</h4>
+                        <p>Toad's Tool 64</p>
+                        <p>2016</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column SM64:TLS">
+                <div class="content">
+                    <a href="media\sm64tls\sm64li.png">
+                        <img src="media\sm64tls\sm64li.png" alt="SM64 Level Importer" style="width:100%">
+                        <h4>Logiciel d'importation de fichier .obj dans SM64</h4>
+                        <p>Super Mario 64 : Level Importer</p>
                         <p>2016</p>
                     </a>
                 </div>
@@ -60,16 +105,36 @@
 
             <div class="column CodWaWZ">
                 <div class="content">
-                    <a href="media\ssj1.png">
-                        <img src="media\ssj1.png" alt="Mountains" style="width:100%">
-                        <h4>Call of Duty: World at War Zombies</h4>
+                    <a href="media\codwaw\screen1.png">
+                        <img src="media\codwaw\screen1.png" alt="Screen 1" style="width:100%">
+                        <h4>Screenshot 1</h4>
                         <p>Call of Duty: World at War</p>
-                        <p>2016</p>
+                        <p>2018</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column CodWaWZ">
+                <div class="content">
+                    <a href="media\codwaw\screen2.png">
+                        <img src="media\codwaw\screen2.png" alt="Screen 2" style="width:100%">
+                        <h4>Screenshot 2</h4>
+                        <p>Call of Duty: World at War</p>
+                        <p>2018</p>
+                    </a>
+                </div>
+            </div>
+            <div class="column CodWaWZ">
+                <div class="content">
+                    <a href="media\codwaw\radiant.png">
+                        <img src="media\codwaw\radiant.png" alt="Radiant" style="width:100%">
+                        <h4>Logiciel de level design pour CoD: WaW</h4>
+                        <p>Call of Duty: World at War</p>
+                        <p>2018</p>
                     </a>
                 </div>
             </div>
 
-            <div class="column SFM">
+            <div class="column C4D">
                 <div class="content">
                     <a href="media\render4k.png">
                         <img src="media\render4k.png" alt="Mountains" style="width:100%">
@@ -80,7 +145,7 @@
                 </div>
             </div>
 
-            <div class="column C4D">
+            <div class="column SFM">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
@@ -384,6 +449,11 @@
 <!-- END GRID -->
         </div>
     </section>
+
+<div id="imageModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="modalImg">
+</div>
 
 <hr>
 
