galerie sfm + preview

--- a/galerie.html
+++ b/galerie.html
@@ -157,7 +157,7 @@
             <div class="column C4D">
                 <div class="content">
                     <img src="media\c4d\Photo6.jpg" alt="Render 1" style="width:100%">
-                    <h4>Fond d'écran Freddy Fazbear</h4>
+                    <h4>Shadow Bonnie</h4>
                     <p>Cinema 4D R17</p>
                     <p>Juin 2020</p>
                 </div>
@@ -165,10 +165,131 @@
 
             <div class="column SFM">
                 <div class="content">
-                    <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                    <h4>Super Mario 64: The Lost Stars</h4>
-                    <p>Cinema 4D</p>
-                    <p>2016</p>
+                    <img src="media\sfm\ChildLink.png" alt="ChildLink" style="width:100%">
+                    <h4>Child Link</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Juillet 2020</p>
+                </div>
+            </div>
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\ChildLink2.png" alt="ChildLink2" style="width:100%">
+                    <h4>Child Link</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Juillet 2020</p>
+                </div>
+            </div>
+            <div class="column SFM">
+                <div class="content">
+                    <video controls>
+                        <source src="media\sfm\ChildLinkmaster2.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture vidéo.
+                    </video>
+                    <h4>jsp</h4>
+                    <p>Cinema 4D R17</p>
+                    <p>Juin 2020</p>
+                </div>
+            </div>
+
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\Render1.png" alt="RenderMario" style="width:100%">
+                    <h4>Render Mario</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Octobre 2020</p>
+                </div>
+            </div>
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\Render2.png" alt="RenderMario2" style="width:100%">
+                    <h4>Render Mario</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Octobre 2020</p>
+                </div>
+            </div>
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\Render4.png" alt="RenderMario3" style="width:100%">
+                    <h4>Render Stylized Mario</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Novembre 2020</p>
+                </div>
+            </div>
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\Render5.png" alt="RenderMario4" style="width:100%">
+                    <h4>Render Stylized Mario</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Novembre 2020</p>
+                </div>
+            </div>
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\Render3.png" alt="RenderLink4" style="width:100%">
+                    <h4>Render Stylized Link</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Novembre 2020</p>
+                </div>
+            </div>
+
+            <div class="column SFM">
+                <div class="content">
+                    <video controls>
+                        <source src="media\sfm\wallpaper.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture vidéo.
+                    </video>
+                    <h4>Wallpaper Mario</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Février 2021</p>
+                </div>
+            </div>
+
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\render_3d_all_stars.png" alt="render_3d_all_stars" style="width:100%">
+                    <h4>Render 3D All Stars</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Avril 2021</p>
+                </div>
+            </div>
+
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\luigimansionrerender.png" alt="luigimansionrerender" style="width:100%">
+                    <h4>Luigi's Mansion ReRendered</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Novembre 2021</p>
+                </div>
+            </div>
+
+            <div class="column SFM">
+                <div class="content">
+                    <img src="media\sfm\sm64ds.png" alt="sm64ds" style="width:100%">
+                    <h4>Super Mario 64 DS</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Janvier 2023</p>
+                </div>
+            </div>
+
+            <div class="column SFM">
+                <div class="content">
+                    <video controls>
+                        <source src="media\sfm\mario.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture vidéo.
+                    </video>
+                    <h4>Fire Mario</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Février 2023</p>
+                </div>
+            </div>
+
+
+            <div class="column Bld">
+                <div class="content">
+                    <img src="media\blender\mario64render.png" alt="mario64render" style="width:100%">
+                    <h4>Super Mario 64 Render96</h4>
+                    <p>Blender</p>
+                    <p>Février 2023</p>
                 </div>
             </div>
 
@@ -248,19 +369,68 @@
                     <img src="media\blender\challenge2.jpg" alt="Habitat" style="width:100%">
                     <h4>Challenge Créatif 2 : Habitat Ventriculaire</h4>
                     <p>Blender</p>
-                    <p>Février 2023</p>
+                    <p>Février 2024</p>
                 </div>
             </div>
 
             <div class="column Bld">
                 <div class="content">
-                    <img src="media\blender\hardsurface.png" alt="Ray Gun" style="width:100%">
-                    <h4>Hardsurface : Avion Steampunk</h4>
+                    <img src="media\blender\remake.png" alt="remake" style="width:100%">
+                    <h4>Mario & Luigi</h4>
                     <p>Blender</p>
-                    <p>Mars 2023</p>
+                    <p>Février 2024</p>
                 </div>
             </div>
 
+            <div class="column Bld">
+                <div class="content">
+                    <img src="media\blender\hardsurface.png" alt="Steampunk" style="width:100%">
+                    <h4>Hardsurface : Avion Steampunk</h4>
+                    <p>Blender</p>
+                    <p>Mars 2024</p>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <img src="media\blender\dance.png" alt="dance" style="width:100%">
+                    <h4>Mario Movie</h4>
+                    <p>Blender</p>
+                    <p>Mars 2024</p>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <video controls>
+                        <source src="media\blender\Produce_0.mp4" type="video/mp4">
+                        Votre navigateur ne supporte pas la lecture vidéo.
+                    </video>
+                    <h4>Super Mario 64 DS Movie</h4>
+                    <p>Blender</p>
+                    <p>Modèles de Awesome3D</p>
+                    <p>Mars 2024</p>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <img src="media\blender\2low.png" alt="ddr" style="width:100%">
+                    <h4>Dance Dance Mario</h4>
+                    <p>Blender</p>
+                    <p>Mars 2024</p>
+                </div>
+            </div>
+
+            <div class="column Bld">
+                <div class="content">
+                    <img src="media\blender\wii.png" alt="wii" style="width:100%">
+                    <h4>Wii Mario Movie</h4>
+                    <p>Blender</p>
+                    <p>Avril 2024</p>
+                </div>
+            </div>
+            
             <div class="column Bld">
                 <div class="content">
                     <video controls>
@@ -280,6 +450,7 @@
                     <p>Avril 2024</p>
                 </div>
             </div>
+
             <div class="column Bld">
                 <div class="content">
                     <video controls>
