--- a/galerie.html
+++ b/galerie.html
@@ -185,9 +185,9 @@
                         <source src="media\sfm\ChildLinkmaster2.mp4" type="video/mp4">
                         Votre navigateur ne supporte pas la lecture vidéo.
                     </video>
-                    <h4>jsp</h4>
-                    <p>Cinema 4D R17</p>
-                    <p>Juin 2020</p>
+                    <h4>Child Link Master Sword</h4>
+                    <p>Source Filmmaker</p>
+                    <p>Juillet 2020</p>
                 </div>
             </div>
 
@@ -430,7 +430,7 @@
                     <p>Avril 2024</p>
                 </div>
             </div>
-            
+
             <div class="column Bld">
                 <div class="content">
                     <video controls>
