galerie revamp colors

--- a/galerie.html
+++ b/galerie.html
@@ -16,6 +16,7 @@
     <section id="titre" class="fade-in">
         <h2>Galerie</h2>
         <p>Galerie des projets images / vidéos</p>
+        <p>(la page peu ramer un peu à cause des images et des vidéos à charger...)</p>
     </section>
 
         <div id="myBtnContainer">
