--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="#presentation">CV</a>
+        <a href="cv.html">CV</a>
         <a href="frise.html">Portfolio Virtuel</a>
         <a href="galerie.html">Galerie</a>
         <a href="#contact">Contact</a>
