--- a/galerie.html
+++ b/galerie.html
@@ -380,6 +380,7 @@
                     <h4>Mario & Luigi</h4>
                     <p>Blender</p>
                     <p>Février 2024</p>
+                    <p>Modèle de Awesome3D</p>
                 </div>
             </div>
 
@@ -398,6 +399,7 @@
                     <h4>Mario Movie</h4>
                     <p>Blender</p>
                     <p>Mars 2024</p>
+                    <p>Modèle de Awesome3D</p>
                 </div>
             </div>
 
@@ -409,8 +411,8 @@
                     </video>
                     <h4>Super Mario 64 DS Movie</h4>
                     <p>Blender</p>
-                    <p>Modèles de Awesome3D</p>
                     <p>Mars 2024</p>
+                    <p>Modèle de Awesome3D</p>
                 </div>
             </div>
 
@@ -420,6 +422,7 @@
                     <h4>Dance Dance Mario</h4>
                     <p>Blender</p>
                     <p>Mars 2024</p>
+                    <p>Modèle de Awesome3D</p>
                 </div>
             </div>
 
@@ -429,6 +432,7 @@
                     <h4>Wii Mario Movie</h4>
                     <p>Blender</p>
                     <p>Avril 2024</p>
+                    <p>Modèle de Awesome3D</p>
                 </div>
             </div>
 
@@ -500,6 +504,7 @@
                     <h4>"You're gonna PAY for that !"</h4>
                     <p>Blender</p>
                     <p>Mai 2024</p>
+                    <p>Modèle exporté du jeu: Dragon Ball FighterZ</p>
                 </div>
             </div>
 
@@ -517,8 +522,8 @@
                     <img src="media\blender\base.png" alt="Base Form Son Gokûs" style="width:100%">
                     <h4>Base Form Son Gokû</h4>
                     <p>Blender</p>
-                    <p>Modèle exporté du jeu: Dragon Ball: Sparking ZERO!</p>
                     <p>Janvier 2025</p>
+                    <p>Modèle exporté du jeu: Dragon Ball: Sparking ZERO!</p>
                 </div>
             </div>
 
@@ -527,8 +532,8 @@
                     <img src="media\blender\ssj1.png" alt="Super Saiyan Son Gokû" style="width:100%">
                     <h4>Super Saiyan Son Gokû</h4>
                     <p>Blender</p>
-                    <p>Modèle exporté du jeu: Dragon Ball: Sparking ZERO!</p>
                     <p>Janvier 2025</p>
+                    <p>Modèle exporté du jeu: Dragon Ball: Sparking ZERO!</p>
                 </div>
             </div>
 
