v1 page sm64tls

--- a/frise.html
+++ b/frise.html
@@ -17,7 +17,7 @@
     <section id="timeline2" class="fade-in">
         <h2>Ma Frise Chronologique</h2>
         <div class="timeline2">
-            <div class="timeline-event2" onclick="location.href='page1.html'">
+            <div class="timeline-event2" onclick="location.href='sm64tls/sm64tls.html'">
                 <span class="timeline-date2">Commencer !</span>
             </div>
         </div>
@@ -26,8 +26,8 @@
     <section id="timeline" class="fade-in">
         <h1>Chapitres</h1>
         <div class="timeline">
-            <div class="timeline-event" onclick="location.href='page1.html'">
-                <span class="timeline-date">2016 -2018</span>
+            <div class="timeline-event" onclick="location.href='sm64tls/sm64tls.html'">
+                <span class="timeline-date">2016 -2019</span>
                 <span class="timeline-content">Super Mario 64</span>
                 <img src="media\mario.png">
             </div>
