--- a/sm64tls/sm64tls.html
+++ b/sm64tls/sm64tls.html
@@ -123,12 +123,12 @@
             <h1>Gameplay:</h1>
         </section>
 
-        <section id="projets" class="fade-in">
-        <video controls>
-            <source src="media\Portfolio_Naim_Ben_Amar.mp4" type="video/mp4">
-            Votre navigateur ne supporte pas la lecture vidéo.
-        </video>
-    </section>
+        <section class="center-video">
+            <video controls>
+                <source src="media\Portfolio_Naim_Ben_Amar.mp4" type="video/mp4">
+                Votre navigateur ne supporte pas la lecture vidéo.
+            </video>
+        </section>
     </main>
 
     <script src="sm64tls.js"></script>
