credits sm64tls

--- a/sm64tls/sm64tls.html
+++ b/sm64tls/sm64tls.html
@@ -25,6 +25,11 @@
                     <button class="button button3">Gameplay</button>
                 </a>
             </div>
+            <div class="content4">
+                <a href="#credits">
+                    <button class="button button4">Crédits</button>
+                </a>
+            </div>
         </div>
     </header>
 
@@ -129,6 +134,39 @@
                 Votre navigateur ne supporte pas la lecture vidéo.
             </video>
         </section>
+
+        <section class="copyrights">
+          <p>Super Mario™ est une licence appartenant à Nintendo ®. Super Mario 64™ est un jeu créer, édité et publié par Nintendo ®. SM64: The Lost Stars est une rom hack réalisé par moi-même à but non lucratif. SM64: The Lost Stars n'est pas partagable ou téléchargable sur Internet et ne le sera jamais. Tout les droits reviennent à Nintendo of America ® ainsi que Nintendo Japan ®.</p>  
+        </section>
+        
+    </main>
+
+    <hr>
+
+    <main class="fade-in">
+        <section id="credits" class="center-text">
+            <h1>Crédits:</h1>
+        </section>
+
+        <section class="text-image-credits">
+            <img src="media\sketchuplogo.png" alt="Description de l'image">
+            <p>SketchUp 2017: Trimble</p>
+        </section>
+
+        <section class="text-image-credits">
+            <img src="media\logosm64li.png" alt="Description de l'image">
+            <p>SM64 Level Importer: PablosCorner, Skelux</p>
+        </section>
+
+        <section class="text-image-credits">
+            <img src="media\logott64.png" alt="Description de l'image">
+            <p>Toad's Tool 64: VL-Tone, Skelux.</p>
+        </section>
+
+        <section class="copyrights">
+          <p>Super Mario™ est une licence appartenant à Nintendo ®. Super Mario 64™ est un jeu créer, édité et publié par Nintendo ®. SM64: The Lost Stars est une rom hack réalisé par moi-même à but non lucratif. SM64: The Lost Stars n'est pas partagable ou téléchargable sur Internet et ne le sera jamais. Tout les droits reviennent à Nintendo of America ® ainsi que Nintendo Japan ®.</p>  
+        </section>
+        
     </main>
 
     <script src="sm64tls.js"></script>
